Implement display of single digit

--- a/lock/lock/lock.ioc
+++ b/lock/lock/lock.ioc
@@ -41,10 +41,10 @@ MxCube.Version=5.4.0
 MxDb.Version=DB.5.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI0_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -140,7 +140,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,1-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
