--- a/lock/lock/lock.ioc
+++ b/lock/lock/lock.ioc
@@ -145,7 +145,7 @@ PCC.Series=STM32F1
 PCC.Temperature=25
 PCC.Vdd=3.3
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
